# C.O.R.T.E.X.---Conversation-Orchestration-Retrieval-Technology-for-Expansive-X-platform-intelligence

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  fix_docker.py  fix_env.py  start_cortex.bat
apps/api/: .coverage  .dockerignore  Dockerfile  fix_main.py  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  firestore.py  logging_config.py  main.py  neo4j_client.py
apps/api/app/auth0/: __init__.py  extension_tokens.py  jwt_verifier.py
apps/api/app/middleware/: logging.py  rate_limit.py
apps/api/app/models/: __init__.py  analytics.py  artifact.py  audit.py  base.py  conversation.py  duplicate.py  embedding.py  folder.py  job.py  knowledge.py  message.py  pii.py  provider.py  user.py  workspace.py
apps/api/app/providers/: __init__.py  base.py  registry.py
apps/api/app/routers/: analytics.py  artifacts.py  auth.py  connectors.py  conversations.py  health.py  ingest.py  jobs.py  knowledge_graph.py  provider_accounts.py  search.py  settings.py  usage.py  workspaces.py
apps/api/app/schemas/: analytics.py  artifacts.py  auth.py  common.py  connectors.py  conversation.py  ingest.py  knowledge.py  provider_accounts.py  usage.py  (+1 more)
apps/api/nexus_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: run_neo4j_migrations.py
apps/api/tests/: test_auth0_verifier.py  test_auth_chain_integration.py  test_chat_grounding_service.py  test_connector_services.py  test_conversations_ollama.py  test_deep_analytics.py  test_embedding_service.py  test_ingest_extension.py  test_llm_service.py  test_multi_source_artifact_generation.py  test_provider_registry.py  test_search.py
(+121 files in other folders)
