[project]
name = "nexus-api"
version = "0.1.0"
description = "NEXUS AI Conversation Intelligence Platform — API Server"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Cache & Queue
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",

    # Auth & Security
    "pyjwt[crypto]>=2.9.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",

    # Search
    "meilisearch>=0.31.0",

    # AI & ML
    "sentence-transformers>=3.0.0",
    "bertopic>=0.16.0",
    "spacy>=3.7.0",

    # Object Storage
    "minio>=7.2.0",

    # Validation & Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",

    # Observability
    "structlog>=24.4.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
